--- a/Finaizen/src/components/sidebar_user.html
+++ b/Finaizen/src/components/sidebar_user.html
@@ -12,22 +12,19 @@
       <li><a href="presupuestos.html">Ajuste de presupuestos</a></li>
       <li><a href="planificador_deudas.html">Planificador de deudas</a></li>
       <li><a href="logros.html">Logros y Recompensas</a></li>
-      <li><a href="config_perfiles.html">Cambiar Perfil</a></li>
-      <li><a href="config_cuenta.html">Configuración de Cuenta</a></li>
-      <li><a href="config_ayuda.html">Ayuda</a></li>
     </ul>
   </nav>
 
   <div class="sidebar-footer">
-    <div class="user">
-      <a href="dashboard.html">
+    <div class="user" id="user-menu-trigger">
       <img
-        src="https://placehold.co/40x40/6c757d/ffffff?text=X"
+        src="https://placehold.co/40x40/6c757d/ffffff?text=U"
         alt="Ícono de Usuario"
-        style="cursor: pointer;"
       />
-    </a>
       <p>Kevin Perez, Xavier Espinel, Karen Tenorio</p>
     </div>
+    
+    <!-- El menú flotante se cargará aquí -->
+    <div id="user-dropdown-container"></div>
   </div>
 </aside>
